# Void-System

./: .gitignore  CONTEXT.md  DESIGN.md  PROJECT_RULES.md  README.md  history_list.txt  history_list_raw.txt  history_specific_list.txt  start-dev.bat  待做  框架.md  框架与系统开发策划案.md  虚空系统项目展示PPT.md  路由修复最终报告.md  路由对比报告.md
void-system-backend/: .env.example  README.md  backend_routes.txt  chains_schema.txt  check_routes.py  check_task_user_ids.py  config.py  database.py  errors.py  main.py  mypy.ini  pyproject.toml  tasks_schema.txt  tasks_schema_final.txt  tasks_schema_utf8.txt  test.py  test_delete_document.py  void_system.db
void-system-backend/.history/: main_20251112143016.py
void-system-backend/adapters/: __init__.py
void-system-backend/api/: __init__.py  personalized_qa.py  session_context_manager.py  session_file_access.py  user_document_manager.py  user_document_parser.py  user_vector_manager.py
void-system-backend/chroma_db/: chroma.sqlite3
void-system-backend/core/: __init__.py  analytics_contracts.py  conversation_contracts.py  growth_contracts.py  identity_contracts.py  knowledge_contracts.py  knowledge_workspace_contracts.py  model_connection_profile.py  personal_context_contracts.py  planning_contracts.py  reward_marketplace_contracts.py  runtime_settings.py  session_attachment_contracts.py  system_knowledge_contracts.py  task_automation_contracts.py  task_contracts.py  task_execution_contracts.py  task_workspace_contracts.py
void-system-backend/lc_server/: persona_chain.py  qa_chain.py
void-system-backend/middleware/: __init__.py  auth.py
void-system-backend/modules/: __init__.py
void-system-backend/services/: __init__.py  user_service.py
void-system-backend/tests/: __init__.py  create_test_user.py  test_advisor_chain_evaluation.py  test_ai_configuration.py  test_ai_runtime_injection.py  test_behavior_insights.py  test_chroma_knowledge_store_migration.py  test_configuration_unification.py  test_conversation_workflow.py  test_core_engines.py  test_growth_profile.py  test_http_admin_analytics.py  test_http_administration.py  test_http_ai.py  test_http_architecture.py  test_http_conversations.py  test_http_documents.py  test_http_growth.py  test_http_identity.py  test_http_knowledge_answers.py  test_http_personal_context.py  test_http_planning.py  test_http_reward_marketplace.py  test_http_session_files.py  test_http_system.py  test_http_task_automation.py  test_http_task_execution.py  test_http_task_workflow.py  test_http_task_workspace.py  test_image_knowledge_ingestion.py  test_knowledge_evaluation.py  test_knowledge_lifecycle.py  test_knowledge_resources.py  test_knowledge_retrieval_failures.py  test_knowledge_workspace.py  test_layered_profile_workspace.py  (+27 more)
(+785 files in other folders)
