[project]
name = "void-system-backend"
version = "0.1.0"
description = "Void System Backend - 用户认证、AI对话和文档智能处理服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "langchain>=1.0.5",
    "langserve>=0.3.3",
    "mypy>=1.19.0",
    "openai>=2.7.2",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "types-requests>=2.32.4.20250913",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.6",
    "aiofiles>=0.23.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.1",
    "pandas>=1.5.0",
    "openpyxl>=3.0.10",
    "Pillow>=9.0.0",
]
