[project]
name = "void-system-backend"
version = "0.1.0"
description = "Void System Backend - 用户认证、AI对话和文档智能处理服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langserve>=0.3.3",
    "openai>=2.7.2",
    "pydantic>=2.12.4",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.6",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.1",
    "pandas>=1.5.0",
    "openpyxl>=3.0.10",
    "Pillow>=9.0.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.0",
]
